<resources>
    <string name="app_name">Wealth</string>
    <string name="error_load_app">에러가 발생하여 앱을 종료합니다.</string>
    <string name="turn_on_gps">GPS를 활성화해주세요</string>
    <string name="symbol_celsius">º</string>
    <string name="temp_with_symbol">%dº</string>
    <string name="dust_copyright">한국환경공단</string>

    <!--날씨 id에 따른 날씨 설명-->
    <string name="weather_not_found">지금 날씨는 정말 안좋아요</string>
    <!--비-->
    <string name="weather_200">천둥 번개를 동반한 비가 내려요</string>
    <string name="weather_201">천둥 번개를 동반한 비가 내려요</string>
    <string name="weather_202">천둥 번개를 동반한 비가 내려요</string>
    <string name="weather_210">천둥 번개가 치고 있어요</string>
    <string name="weather_211">천둥 번개가 치고 있어요</string>
    <string name="weather_212">천둥 번개가 치고 있어요</string>
    <string name="weather_221">천둥 번개가 치고 있어요</string>
    <string name="weather_230">천둥 번개를 동반한 비가 내려요</string>
    <string name="weather_231">천둥 번개를 동반한 비가 내려요</string>
    <string name="weather_232">천둥 번개를 동반한 비가 내려요</string>
    <string name="weather_300">이슬비가 내려요</string>
    <string name="weather_301">이슬비가 내려요</string>
    <string name="weather_302">이슬비가 내려요</string>
    <string name="weather_310">이슬비가 내려요</string>
    <string name="weather_311">이슬비가 내려요</string>
    <string name="weather_312">이슬비가 내려요</string>
    <string name="weather_313">이슬비가 내려요</string>
    <string name="weather_314">이슬비가 내려요</string>
    <string name="weather_321">이슬비가 내려요</string>
    <string name="weather_500">비가 조금 내려요</string>
    <string name="weather_501">비가 내리고 있어요</string>
    <string name="weather_502">비가 많이 내려요</string>
    <string name="weather_503">비가 몰아치듯 강렬하게 내려요</string>
    <string name="weather_504">비가 몰아치듯 강렬하게 내려요</string>
    <string name="weather_511">우빙이 보여요</string>
    <string name="weather_520">가벼운 소나기가 내려요</string>
    <string name="weather_521">소나기가 내려요</string>
    <string name="weather_522">강렬한 소나기가 내리고 있어요</string>
    <string name="weather_531">소나기가 내려요</string>
    <!--눈-->
    <string name="weather_600">눈이 조금 내려요</string>
    <string name="weather_601">눈이 내리고 있어요</string>
    <string name="weather_602">폭설이 몰아치고 있어요</string>
    <string name="weather_611">진눈깨비가 내려요</string>
    <string name="weather_612">가벼운 소나기처럼 진눈깨비가 내려요</string>
    <string name="weather_613">소나기처럼 진눈깨비가 내려요</string>
    <string name="weather_615">눈과 비가 조금씩 내려요</string>
    <string name="weather_616">눈과 비가 내려요</string>
    <string name="weather_620">가벼운 소나기처럼 눈이 내려요</string>
    <string name="weather_621">소나기처럼 눈이 내려요</string>
    <string name="weather_622">강렬한 소나기처럼 눈이 내려요</string>
    <!--특수 기상 예보-->
    <string name="weather_701">이슬이 맺혔어요</string>
    <string name="weather_711">주변에서 연기가 나는걸 봤어요</string>
    <string name="weather_721">실안개가 끼었어요</string>
    <string name="weather_731">먼지 바람이 불어요</string>
    <string name="weather_741">안개가 끼었어요</string>
    <string name="weather_751">대기 중 먼지가 많아요</string>
    <string name="weather_761">대기 중 먼지가 많아요</string>
    <string name="weather_762">화산재를 조심하세요</string>
    <string name="weather_771">돌풍이 불고 있어요</string>
    <string name="weather_781">토네이도를 조심하세요</string>
    <!--맑음-->
    <string name="weather_800">맑은 하늘이 정말 아름답네요</string>
    <string name="weather_801">구름이 곁들여진 맑은 하늘이 이뻐요</string>
    <!--흐림-->
    <string name="weather_802">날이 조금 흐리네요</string>
    <string name="weather_803">구름이 많은 날이네요</string>
    <string name="weather_804">구름이 하늘을 가득 덮었어요</string>
    <!--날씨 id에 따른 날씨 설명-->

    <string name="covid_title">Covid-19</string>
    <string name="city">City</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="all">All</string>
    <string name="patient_occur">확진 발생</string>
    <string name="Isolator">격리자</string>
    <string name="region_occur">지역 발생</string>
    <string name="zero">0</string>
    <string name="inflow">해외 유입</string>
    <string name="covid_request_fail">코로나 정보를 받아오는데 문제가 발생했습니다</string>
    <string name="loading">Loading..</string>
    <string name="not_exist_update_data">아직 오늘 정보가 발표되지 않았어요!</string>
    <string name="api_not_response">서버 상태가 불안정합니다. 잠시후 다시 확인해주세요.</string>
    <string name="convert_tm_fail">현재 위치 정보를 수집하는데 실패했습니다. 앱을 종료 후 다시 시작해주세요</string>
    <string name="fail_find_dust_station">주변 측정소를 찾는데 실패했습니다.</string>
    <string name="fail_receicve_dust_from_station">해당 측정소에서 정보를 받아오는데 실패했습니다.</string>
    <string name="fine_dust">미세먼지</string>
    <string name="ultra_fine_dust">초미세먼지</string>
    <string name="carbon_monoxide">일산화탄소</string>
    <string name="nitrogen_dioxide">이산화질소</string>
    <string name="ozone">오존</string>
    <string name="sulfur_dioxide">아황산가스</string>
    <string name="grade_good">좋음</string>
    <string name="grade_normal">보통</string>
    <string name="grade_bad">나쁨</string>
    <string name="grade_too_bad">매우 나쁨</string>
    <string name="working">점검중</string>
    <string name="current">현재</string>
    <string name="tomorrow">내일</string>
    <string name="request_coordinates">위치 정보를 수집 중..</string>
    <string name="find_dust_station">주변 측정소 찾는 중..</string>
    <string name="request_dust_info">대기 정보 수집 중..</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="widget_covid_label">코로나&#160;&#160;%d명</string>
    <string name="widget_pm10_label">미세먼지&#160;&#160;%s</string>
    <string name="widget_pm25_label">초미세먼지&#160;&#160;%s</string>
    <string name="widget_date_pattern">E요일&#160;&#160;(yyyy.MM.dd)</string>
    <string name="detail">Detail</string>
    <string name="cloud_chart_label">운량(%)</string>
    <string name="pop_chart_label">강수확률(%)</string>
    <string name="humidity_chart_label">습도(%)</string>
    <string name="feelslike_chart_label">체감 온도(°C)</string>
    <string name="current_temp_chart_label">기온(°C)</string>
    <string name="temp_range_chart_label">일교차(°C)</string>
    <string name="max_temp_chart_label">최고 기온(°C)</string>
    <string name="average_temp_chart_label">평균 기온(°C)</string>
    <string name="min_temp_chart_label">최저 기온(°C)</string>
    <string name="covid_detail_tab">감염 상세</string>
    <string name="week_weather_tab">주간 날씨</string>
    <string name="weather_detail_tab">날씨 상세</string>
    <string name="temp_range_tab">일교차</string>
    <string name="feels_like_tab">체감 온도</string>
    <string name="complete_cure">완치</string>
    <string name="under_treatment">치료</string>
    <string name="death">사망</string>
</resources>