<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_daytime"
    tools:context=".view.main.WealthActivity">

    <TextView
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/gemunu_libre_extra_bold"
        android:gravity="center"
        android:text="@string/city"
        android:textColor="@color/iconic_white"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/titleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon_work_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city" />

    <TextView
        android:id="@+id/dustGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gemunu_libre_extra_bold"
        android:text="@string/working"
        android:textColor="@color/iconic_white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/titleIcon"
        app:layout_constraintStart_toStartOf="@id/titleIcon"
        app:layout_constraintTop_toBottomOf="@id/titleIcon" />

    <TextView
        android:id="@+id/updateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/gemunu_libre_extra_bold"
        android:gravity="center_vertical|end"
        android:textColor="@color/iconic_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/dustList"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="UPDATE: 2020.11.07" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/iconic_white"
        app:layout_constraintBottom_toBottomOf="@id/dustList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dustList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dustList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/iconic_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="170dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/gemunu_libre_extra_bold"
        android:text="@string/current"
        android:textColor="@color/iconic_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/dustList"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/gemunu_libre_extra_bold"
        android:text="@string/tomorrow"
        android:textColor="@color/iconic_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/dustList"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/tomorrowIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:src="@drawable/icon_work_mini"
        app:layout_constraintBottom_toTopOf="@id/tomorrow"
        app:layout_constraintEnd_toEndOf="@id/tomorrow"
        app:layout_constraintStart_toStartOf="@id/tomorrow" />

    <ImageView
        android:id="@+id/todayIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:src="@drawable/icon_work_mini"
        app:layout_constraintBottom_toTopOf="@id/today"
        app:layout_constraintEnd_toEndOf="@id/today"
        app:layout_constraintStart_toStartOf="@id/today" />

    <ImageView
        android:id="@+id/todayStone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:src="@drawable/icon_time_stone"
        app:layout_constraintBottom_toTopOf="@id/today"
        app:layout_constraintEnd_toEndOf="@id/today"
        app:layout_constraintStart_toStartOf="@id/today" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/iconic_white"
        android:paddingStart="1dp"
        android:paddingEnd="1dp"
        app:layout_constraintBottom_toBottomOf="@id/tomorrowStone"
        app:layout_constraintEnd_toStartOf="@id/tomorrowStone"
        app:layout_constraintStart_toEndOf="@id/todayStone"
        app:layout_constraintTop_toTopOf="@id/todayStone" />

    <ImageView
        android:id="@+id/tomorrowStone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:src="@drawable/icon_time_stone"
        app:layout_constraintBottom_toTopOf="@id/tomorrow"
        app:layout_constraintEnd_toEndOf="@id/tomorrow"
        app:layout_constraintStart_toStartOf="@id/tomorrow" />

    <TextView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gemunu_libre_extra_bold"
        android:text="@string/loading"
        android:textColor="@color/iconic_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dustList" />

    <View
        android:id="@+id/progressBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/alpha_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:indeterminateTint="@color/iconic_orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>